[package]
authors = ["guimcaballero <guim@caballerocoll.com>"]
edition = "2021"
name = "bevy_chess"
version = "0.1.0"

resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
# Must override default features to disable "debug"
bevy_mod_picking = {version = "0.15", default-features = false, features = ["backend_raycast", "selection", "highlight"]}
